added emmet demo

--- a/emmetdemo.html
+++ b/emmetdemo.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <!--type this to make the below: main>section>h1>ul>li*6 -->
+    <!-- type the comments to make the structures below them -->
+
+    <!-- main>section>h1>ul>li*6 -->
     <main>
         <section>
             <h1>
@@ -22,6 +26,71 @@
         </section>
     </main>
 
+    <!-- .my-class  -->
     <div class="my-class"></div>
+
+    <!-- h1+h2+h2  -->
+    <h1></h1>
+    <h2></h2>
+    <h2></h2>
+
+    <!-- ul>li*3  -->
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <!-- nav>ul>li  -->
+    <nav>
+        <ul>
+            <li></li>
+        </ul>
+    </nav>
+
+    <!-- ul>li*5>a  -->
+    <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ul>
+
+    <!-- ul>li*3>a[href=$] -->
+    <ul>
+        <li><a href="1"></a></li>
+        <li><a href="2"></a></li>
+        <li><a href="3"></a></li>
+    </ul>
+
+    <!-- ul>li*3>a[href=www.website$.com] -->
+    <ul>
+        <li><a href="www.website1.com"></a></li>
+        <li><a href="www.website2.com"></a></li>
+        <li><a href="www.website3.com"></a></li>
+    </ul>
+
+    <!-- ul>li*3>a[href=www.website$.com]{Website$} -->
+    <ul>
+        <li><a href="www.website1.com">Website1</a></li>
+        <li><a href="www.website2.com">Website2</a></li>
+        <li><a href="www.website3.com">Website3</a></li>
+    </ul>
+
+    <!-- ul>li*2+ul>li*3 -->
+    <ul>
+        <li></li>
+        <li></li>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </ul>
+
+
+
 </body>
+
 </html>
