more work on css

--- a/CSS_section/index.html
+++ b/CSS_section/index.html
@@ -26,10 +26,11 @@
     <!-- <h1 style="color: goldenrod;">Hello World</h1> -->
     <!-- <button style="background-color: rgb(136, 152, 255); color: white;">This is a button</button> -->
 
-    <h1>Hello World</h1>
+    <h1>Giraffe</h1>
 
 
-    <h2>This is an h2</h2>
+    <h2>Habitat</h2>
+    <hr>
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident soluta voluptates suscipit aut id iusto
         totam! Saepe accusamus hic necessitatibus, ratione omnis maiores quas, vel esse magnam dolorem impedit nobis.
@@ -42,10 +43,12 @@
         Optio magni consectetur harum ullam mollitia eum minus. Earum culpa quibusdam repellendus. Aut ea vel nulla?
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto error repellendus obcaecati earum repellat
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#nowhere">Architecto</a> error repellendus
+        obcaecati earum repellat
         deleniti nulla illum veritatis? Atque, illo sapiente minus maxime hic fuga vero quis voluptatem. Laudantium,
         asperiores.
     </p>
+    <h2>Behavior</h2>
     <hr>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo doloremque magnam nobis iusto fugit minus
@@ -53,6 +56,11 @@
         voluptates ab quia.
         Accusantium hic accusamus provident, soluta id alias veritatis quis, rem natus cum reiciendis modi expedita unde
         nihil cupiditate molestias fugiat a repudiandae, quidem ex nam cumque officiis! Iusto, molestiae illum.
+    </p>
+    <h2>Neck</h2>
+    <hr>
+    <p>
+        Long.
     </p>
 
     <div>
