changed file name

--- a/CSS_section/index.html
+++ b/CSS_section/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Intro</title>
 
-    <link rel="stylesheet" href="my_styles.css">
+    <link rel="stylesheet" href="index_styles.css">
 
     <!-- If you do it this way, you'd have to copy-paste this into every document -->
     <!-- should go in a style sheet (.css) -->
