--- a/CSS_section/index.html
+++ b/CSS_section/index.html
@@ -28,45 +28,58 @@
 
     <h1>Giraffe</h1>
 
-
-    <h2>Habitat</h2>
-    <hr>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident soluta voluptates suscipit aut id iusto
-        totam! Saepe accusamus hic necessitatibus, ratione omnis maiores quas, vel esse magnam dolorem impedit nobis.
-        Eligendi quod a quisquam error natus tempore esse sequi iure, hic aperiam, quidem expedita fugiat consectetur?
-        Assumenda a repellendus sit odit necessitatibus rerum placeat voluptates quo ullam! Iure, consequuntur velit.
-        Accusamus vel consectetur dolorem qui accusantium laudantium voluptatem consequuntur expedita similique sed,
-        beatae ratione natus obcaecati officia temporibus quaerat ut ipsam itaque facere nisi pariatur. Natus sed
-        corporis sit molestiae.
-        Asperiores voluptas mollitia amet eaque, officia itaque quis totam aperiam ea recusandae? Voluptates, animi.
-        Optio magni consectetur harum ullam mollitia eum minus. Earum culpa quibusdam repellendus. Aut ea vel nulla?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#nowhere">Architecto</a> error repellendus
-        obcaecati earum repellat
-        deleniti nulla illum veritatis? Atque, illo sapiente minus maxime hic fuga vero quis voluptatem. Laudantium,
-        asperiores.
-    </p>
-    <h2>Behavior</h2>
-    <hr>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo doloremque magnam nobis iusto fugit minus
-        assumenda dolorem laborum veniam, odit debitis temporibus molestias aperiam soluta deleniti aspernatur
-        voluptates ab quia.
-        Accusantium hic accusamus provident, soluta id alias veritatis quis, rem natus cum reiciendis modi expedita unde
-        nihil cupiditate molestias fugiat a repudiandae, quidem ex nam cumque officiis! Iusto, molestiae illum.
-    </p>
-    <h2>Neck</h2>
-    <hr>
-    <p>
-        Long.
-    </p>
-
+    <section class="topic">
+        <h2>Habitat <span class="summary">Africa</span></h2>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident soluta voluptates suscipit aut id iusto
+            totam! Saepe accusamus hic necessitatibus, ratione omnis maiores quas, vel esse magnam dolorem impedit
+            nobis.
+            Eligendi quod a quisquam error natus tempore esse sequi iure, hic aperiam, quidem expedita fugiat
+            consectetur?
+            Assumenda a repellendus sit odit necessitatibus rerum placeat voluptates quo ullam! Iure, consequuntur
+            velit.
+            Accusamus vel consectetur dolorem qui accusantium laudantium voluptatem consequuntur expedita similique sed,
+            beatae ratione natus obcaecati officia temporibus quaerat ut ipsam itaque facere nisi pariatur. Natus sed
+            corporis sit molestiae.
+            Asperiores voluptas mollitia amet eaque, officia itaque quis totam aperiam ea recusandae? Voluptates, animi.
+            Optio magni consectetur harum ullam mollitia eum minus. Earum culpa quibusdam repellendus. Aut ea vel nulla?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#nowhere">Architecto</a> error
+            repellendus
+            obcaecati earum repellat
+            deleniti nulla illum veritatis? Atque, illo sapiente minus maxime hic fuga vero quis voluptatem. Laudantium,
+            asperiores.
+        </p>
+    </section>
+    <section class="topic">
+        <h2>Behavior <span class="summary">Likes to eat</span></h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo doloremque magnam nobis iusto fugit minus
+            assumenda dolorem laborum veniam, odit debitis temporibus molestias aperiam soluta deleniti aspernatur
+            voluptates ab quia.
+            Accusantium hic accusamus provident, soluta id alias veritatis quis, rem natus cum reiciendis modi expedita
+            unde
+            nihil cupiditate molestias fugiat a repudiandae, quidem ex nam cumque officiis! Iusto, molestiae illum.
+        </p>
+    </section>
+    <section class="topic">
+        <h2>Neck <span class="summary">Long</span></h2>
+        <p>
+            Long.
+        </p>
+    </section>
     <div>
-        <button>Button 1</button>
-        <button>Button 2</button>
+        <button>Upvote</button>
+        <button id="downvote">Downvote</button>
     </div>
+    <footer>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#License">License</a></li>
+            <li><a href="#About">About</a></li>
+        </ul>
+    </footer>
 
 </body>
 
