more css work again

--- a/CSS_section/index.html
+++ b/CSS_section/index.html
@@ -73,6 +73,18 @@
         <button>Upvote</button>
         <button id="downvote">Downvote</button>
     </div>
+    <div class="suggestion">
+        <label for="suggestion">Suggestion:</label>
+        <input type="text" name="suggestion" id="suggestion">
+        <button>Submit</button>
+    </div>
+    <div>
+        Are you satisfied with this page?:
+        <input type="radio" name="satisfied" id="yes" value="yes">
+        <label for="yes">Yes</label>
+        <input type="radio" name="satisfied" id="no" value="no">
+        <label for="no">No</label>
+    </div>
     <footer>
         <ul>
             <li><a href="#home">Home</a></li>
