--- a/CSS_section/bootstrap.html
+++ b/CSS_section/bootstrap.html
@@ -37,10 +37,36 @@
         <h2 class="display-4">Buttons</h2>
         <button type="button" class="btn btn-primary">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-outline-warning btn-lg">Warning Large</button>
         <button type="button" class="btn btn-outline-info btn-sm">Info Small</button>
         <button type="button" class="btn btn-success">Success</button>
         <button type="button" class="btn btn-success" disabled>Success Disabled</button>
+        <button type="button" class="btn btn-outline-warning btn-lg">Warning Large</button>
+        
+        <h2 class="display-4">Button Groups</h2>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary">Left</button>
+            <button type="button" class="btn btn-primary">Middle</button>
+            <button type="button" class="btn btn-primary">Right</button>
+          </div>
+
+        <h2 class="display-4">Badges <span class="badge bg-primary">New</span> <span><button type="button" class="btn btn-primary position-relative">Inbox
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">5</span>
+          </button></span>
+        </h2>
+        <button class="btn btn-primary">Updates <span class="badge rounded-pill text-bg-light">300</span></button>
+
+        <h2 class="display-4">Alerts</h2>
+        <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">Alert heading</h4>
+            <p>Alert message.</p>
+            <hr>
+            <p class="mb-0">^That's an hr. Used class="mb-0" on this paragraph (margin bottom).</he></p>
+          </div>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            This alert is dismissable
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+
     </div>
 
 
