--- a/CSS_section/bootstrap.html
+++ b/CSS_section/bootstrap.html
@@ -73,6 +73,7 @@
         <button type="button" class="btn btn-success">Success</button>
         <button type="button" class="btn btn-success" disabled>Success Disabled</button>
         <button type="button" class="btn btn-outline-warning btn-lg">Warning Large</button>
+        <button type="button" class="btn btn-primary shadow-lg px-5 mb-2">Shadow, Padding-X</button>
 
         <h2 class="display-4">Button Groups</h2>
         <div class="btn-group" role="group" aria-label="Basic example">
@@ -282,10 +283,16 @@
 
         </p>
 
-
-
-
-
+        <h2 class="display-4">Display Properties</h2>
+        <p>
+            The text below disappears or appears depending on screen size.
+        </p>
+        <p class="d-none d-lg-block mb-6 mb-lg-3">
+            This text disappears on screen sizes below large.
+        </p>
+        <p id="custom_text">
+            This text has an id with custom properties applied using CSS. This can be done for anything.
+        </p>
 
 
     </div>
