finished js loops, coded todo list

--- a/JS_section/html_js2/index.html
+++ b/JS_section/html_js2/index.html
@@ -9,6 +9,13 @@
 
 <body>
     <h1>html_js2</h1>
+    <h2>To do list exercise</h2>
+    <ul>
+        <li>"new": Adds a new todo</li>
+        <li>"list": Lists all todos</li>
+        <li>"delete": Deletes a todo</li>
+        <li>"quit": Quit the app</li>
+    </ul>
 
 
     <script src="app.js"></script>
